--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </div>
                         <button type="submit" class="btn btn-primary btn-style">Login</button>
                         <p class="forgot-credentials"><a href="#"> Esqueci <strong> <u>Usuário</u> / <u>Senha?</u></strong></a></p>
-                        <p class="create-login"><a href="#">Criar Login</a></p>
+                        <p class="create-login"><a href="login.html">Criar Login</a></p>
                     </form>
                 </div>
             </div>
@@ -42,4 +42,3 @@
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
-</html>
