--- a/login.html
+++ b/login.html
@@ -1,11 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title> FIAP | Login </title>
+
+    <style>
+        .invalid-feedback {
+            display: none;
+        }
+
+        .valid-feedback {
+            display: none;
+        }
+    </style>
+
 </head>
+
 <body>
-    
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <h1 class="mb-4">Criação de título</h1>
+                <form id="registrationForm">
+                    <div class="form-group mb-3">
+                        <label for="usuario">Usuário:</label>
+                        <input type="text" class="form-control" id="usuario" name="usuario" required>
+                        <div class="invalid-feedback">Informação inválida.</div>
+                        <div class="valid-feedback">Informação válida.</div>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="senha">Senha:</label>
+                        <input type="password" class="form-control" id="senha" name="senha" required>
+                        <div class="invalid-feedback">Informação inválida.</div>
+                        <div class="valid-feedback">Informação válida.</div>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="confirmarSenha">Confirmação de Senha:</label>
+                        <input type="password" class="form-control" id="confirmarSenha" name="confirmarSenha" required>
+                        <div class="invalid-feedback">Informação inválida.</div>
+                        <div class="valid-feedback">Informação válida.</div>
+                    </div>
+                    <div class="form-check mb-3">
+                        <input type="checkbox" class="form-check-input" id="aceitarTermos" required>
+                        <label class="form-check-label" for="aceitarTermos">Eu aceito os termos</label>
+                    </div>
+                    <div class="mt-3">
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                        <button type="reset" class="btn btn-primary ml-3" onclick="resetForm()">Limpar
+                            Formulário</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <script>
+
+        $(document).ready(function () {
+            // Adiciona um manipulador de evento para o envio do formulário
+            $('#registrationForm').submit(function (e) {
+                e.preventDefault(); // Impede o envio padrão do formulário
+
+                // Validação para cada campo
+                validateField('usuario');
+                validateField('senha');
+                validateField('confirmarSenha');
+
+                // adicionar a lógica para enviar o formulário se todos os campos forem válidos.
+            });
+
+            // Adiciona manipuladores de eventos de entrada para cada campo
+            $('#usuario, #senha, #confirmarSenha').on('input', function () {
+                validateField($(this).attr('id'));
+            });
+
+            // Função de validação para um campo específico
+            function validateField(fieldId) {
+                var field = $('#' + fieldId);
+                var value = field.val();
+                var invalidFeedback = field.next('.invalid-feedback');
+                var validFeedback = field.nextAll('.valid-feedback');
+
+                // Lógica de validação simples
+                if (value.trim() === '') {
+                    field.addClass('is-invalid');
+                    field.removeClass('is-valid');
+                    invalidFeedback.show();
+                    validFeedback.hide();
+                } else {
+                    field.removeClass('is-invalid');
+                    field.addClass('is-valid');
+                    invalidFeedback.hide();
+                    validFeedback.show();
+                }
+            }
+        });
+
+        // Função para limpar o formulário
+        function resetForm() {
+            $('#registrationForm')[0].reset(); // Limpa os campos do formulário
+            $('.is-invalid').removeClass('is-invalid'); // Remove as classes de validação inválidas
+            $('.is-valid').removeClass('is-valid'); // Remove as classes de validação válidas
+            $('.invalid-feedback').hide(); // Esconde as mensagens de feedback inválidas
+            $('.valid-feedback').hide(); // Esconde as mensagens de feedback válidas
+        }
+
+    </script>
 </body>
+
 </html>
