--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <h1 class="mb-4">Criação de título</h1>
-                <form id="registrationForm">
+                <form id="registrationForm" novalidate>
                     <div class="form-group mb-3">
                         <label for="usuario">Usuário:</label>
                         <input type="text" class="form-control" id="usuario" name="usuario" required>
@@ -46,15 +46,18 @@
                         <div class="valid-feedback">Informação válida.</div>
                     </div>
                     <div class="form-check mb-3">
-                        <input type="checkbox" class="form-check-input" id="aceitarTermos" required>
-                        <label class="form-check-label" for="aceitarTermos">Eu aceito os termos</label>
+                        <input type="checkbox" class="form-check-input" id="invalidCheck" required>
+                        <label class="form-check-label" for="invalidCheck">Eu aceito os termos</label>
+                        <div class="invalid-feedback">
+                            Você deve concordar antes de enviar.
+                        </div>
                     </div>
                     <div class="mt-3">
                         <button type="submit" class="btn btn-primary">Enviar</button>
-                        <button type="reset" class="btn btn-primary ml-3" onclick="resetForm()">Limpar
-                            Formulário</button>
+                        <button type="reset" class="btn btn-primary ml-3" onclick="resetarFormulario()">Limpar Formulário</button>
                     </div>
                 </form>
+                
             </div>
         </div>
     </div>
@@ -65,54 +68,66 @@
 
     <script>
 
-        $(document).ready(function () {
-            // Adiciona um manipulador de evento para o envio do formulário
-            $('#registrationForm').submit(function (e) {
-                e.preventDefault(); // Impede o envio padrão do formulário
+$(document).ready(function () {
+    $('#registrationForm').submit(function (e) {
+        e.preventDefault(); 
 
-                // Validação para cada campo
-                validateField('usuario');
-                validateField('senha');
-                validateField('confirmarSenha');
+        validateField('usuario');
+        validateField('senha');
+        validateField('confirmarSenha');
+        validateCheckbox('invalidCheck');
 
-                // adicionar a lógica para enviar o formulário se todos os campos forem válidos.
-            });
+    });
 
-            // Adiciona manipuladores de eventos de entrada para cada campo
-            $('#usuario, #senha, #confirmarSenha').on('input', function () {
-                validateField($(this).attr('id'));
-            });
+    $('#usuario, #senha, #confirmarSenha').on('input', function () {
+        validateField($(this).attr('id'));
+    });
 
-            // Função de validação para um campo específico
-            function validateField(fieldId) {
-                var field = $('#' + fieldId);
-                var value = field.val();
-                var invalidFeedback = field.next('.invalid-feedback');
-                var validFeedback = field.nextAll('.valid-feedback');
+    $('#invalidCheck').on('change', function () {
+        validateCheckbox('invalidCheck');
+    });
 
-                // Lógica de validação simples
-                if (value.trim() === '') {
-                    field.addClass('is-invalid');
-                    field.removeClass('is-valid');
-                    invalidFeedback.show();
-                    validFeedback.hide();
-                } else {
-                    field.removeClass('is-invalid');
-                    field.addClass('is-valid');
-                    invalidFeedback.hide();
-                    validFeedback.show();
-                }
-            }
-        });
+    function validateField(fieldId) {
+        var field = $('#' + fieldId);
+        var value = field.val();
+        var invalidFeedback = field.next('.invalid-feedback');
+        var validFeedback = field.nextAll('.valid-feedback');
 
-        // Função para limpar o formulário
-        function resetForm() {
-            $('#registrationForm')[0].reset(); // Limpa os campos do formulário
-            $('.is-invalid').removeClass('is-invalid'); // Remove as classes de validação inválidas
-            $('.is-valid').removeClass('is-valid'); // Remove as classes de validação válidas
-            $('.invalid-feedback').hide(); // Esconde as mensagens de feedback inválidas
-            $('.valid-feedback').hide(); // Esconde as mensagens de feedback válidas
+        if (value.trim() === '') {
+            field.addClass('is-invalid');
+            field.removeClass('is-valid');
+            invalidFeedback.show();
+            validFeedback.hide();
+        } else {
+            field.removeClass('is-invalid');
+            field.addClass('is-valid');
+            invalidFeedback.hide();
+            validFeedback.show();
         }
+    }
+
+    function validateCheckbox(fieldId) {
+        var checkbox = $('#' + fieldId);
+        var invalidFeedback = checkbox.next('.invalid-feedback');
+
+        if (!checkbox.prop('checked')) {
+            checkbox.addClass('is-invalid');
+            invalidFeedback.show();
+        } else {
+            checkbox.removeClass('is-invalid');
+            invalidFeedback.hide();
+        }
+    }
+});
+
+
+function resetarFormulario() {
+    $('#registrationForm')[0].reset(); 
+    $('.is-invalid').removeClass('is-invalid'); 
+    $('.is-valid').removeClass('is-valid');
+    $('.invalid-feedback').hide(); 
+    $('.valid-feedback').hide(); 
+}
 
     </script>
 </body>
