--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <title> FIAP | Login </title>
 
     <style>
@@ -25,7 +26,7 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <h1 class="mb-4">Criação de título</h1>
+                <h1 class="mb-4">Criação de Login</h1>
                 <form id="registrationForm" novalidate>
                     <div class="form-group mb-3">
                         <label for="usuario">Usuário:</label>
@@ -49,7 +50,7 @@
                         <input type="checkbox" class="form-check-input" id="invalidCheck" required>
                         <label class="form-check-label" for="invalidCheck">Eu aceito os termos</label>
                         <div class="invalid-feedback">
-                            Você deve concordar antes de enviar.
+                            Informação válida.
                         </div>
                     </div>
                     <div class="mt-3">
